# mbd_challenge

./: .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt
jupyter_notebooks/: EDA.ipynb
src/1_data_service/: Dockerfile  Makefile  README.md  pyproject.toml
src/1_data_service/src/py_challenge_data_service/: __main__.py  app.py
src/2_data_processing/: EDA.ipynb
src/2_data_processing/src/: api_call.py  minio_connection.py
src/data_processing/: EDA.ipynb
src/data_processing/api/: app.py
src/data_processing/src/: api_call.py  data_modeling.py  minio_connection.py
src/data_service/1_data_service/: README.md
src/data_service/src/py_challenge_data_service/: __init__.py  models.py
src/data_service/src/py_challenge_data_service/routes/: animals.py
src/ml_service/: Dockerfile  README.md  pyproject.toml
src/ml_service/src/: __main__.py  app.py  data_modeling.py  data_service_request.py  minio_connection.py  postgres_connection.py
src/user_interface/: Dockerfile  README.md  pyproject.toml
src/user_interface/src/: app.py  ml_service_requests.py
src/user_interface/src/pages/: 0_Home.py  1_predict.py  2_train.py  3_userdata.py
