[project]
name = "py_challenge_user_interface"
version = "0.1.0"
description = "Animal classification user interface"
authors = [{ name = "Nicolas Pietrocola", email = "nicolas.pietrocola@uma.es" }]

dependencies = [
    "streamlit>=1.44.1"
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]